# FreeWise

./: .dockerignore  .gitignore  .~lock.readwise-data.csv#  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.kindle  Makefile  README.md  debug_rendered.html  docker-compose.kindle.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: db.py  main.py  models.py  template_filters.py
app/api_v2/: __init__.py  auth.py  kindle_import.py  router.py  schemas.py
app/importers/: __init__.py  kindle_notebook.py
app/middleware/: __init__.py  gzip_request.py
app/routers/: api_tokens.py  dashboard.py  export.py  highlights.py  importer.py  kindle_cookie.py  library.py  settings.py
app/services/: backup.py  digest.py  email.py  embeddings.py  kindle_cookie.py  kindle_import_status.py  kindle_import_watcher.py  kindle_scrape_trigger.py  notifier.py  quote_card.py
app/static/css/: input.css  tailwind.css
app/templates/: _ask_answer.html  _book_edit_form.html  _book_header.html  _book_highlight.html  _book_summary.html  _bulk_action_bar.html  _cover_search_results.html  _cover_section.html  _dashboard_health.html  _dashboard_on_this_day.html  _highlight_edit.html  _highlight_row.html  _kindle_cookie_status.html  _kindle_scrape_status.html  _pagination_footer.html  _random_highlight.html  _related_highlights.html  _review_card.html  _review_complete.html  _review_edit.html  _tags_section.html  api_tokens.html  ask.html  authors.html  base.html  book_detail.html  dashboard.html  discarded.html  duplicates.html  favorites.html  highlight_permalink.html  import_custom.html  import_kindle.html  import_main.html  import_meebook.html  import_readwise.html  kindle_cookie.html  library.html  mastered.html  review.html  (+5 more)
app/utils/: meebook.py
cli/: README.md  pyproject.toml
cli/freewise_cli/: client.py  config.py  main.py
cli/tests/: conftest.py  test_client.py  test_main.py
docs/: CLI_PLAN.md  KINDLE_BROWSER_EXTENSION.md  KINDLE_JSON_SCHEMA.md  SEMANTIC_SETUP.md  USAGE.md
docs/superpowers/plans/: 2026-04-29-kindle-browser-extension.md
docs/superpowers/specs/: 2026-04-29-kindle-browser-extension-design.md
extensions/chrome/: README.md  background.js  manifest.json  popup.html  popup.js
extensions/kindle-importer/: .gitignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
extensions/kindle-importer/src/: background.ts  content.ts  popup.css  popup.html  popup.ts
extensions/kindle-importer/test/: extract.test.ts  schema-validate.test.ts  smoke.test.ts  storage.test.ts
mcp/: README.md  pyproject.toml
mcp/freewise_mcp/: server.py
mcp/tests/: conftest.py  test_tools.py
scrapers/kindle/: __init__.py  __main__.py  cli.py  models.py  scraper.py
scrapers/kindle/tests/: test_models.py  (+2 more)
scripts/: test_all.sh
shared/: kindle-export-v1.schema.json  kindle-selectors.json
tests/: conftest.py  test_algo_full.py  test_api_token_route.py  test_dashboard.py  test_dashboard_kindle.py  test_db.py  test_db_migrations.py  test_digest.py  test_edit_weight.py  test_embeddings_substrate.py  test_healthz.py  test_highlights.py  test_import_export.py  test_import_kindle_route.py  test_kindle_scrape_trigger.py  test_library.py  test_meebook.py  test_metrics.py  test_models.py  test_quote_card.py  test_review_algorithm.py  test_review_flow.py  test_search_fts5.py  test_settings.py  test_tags.py  test_template_filters.py
tests/api_v2/: test_admin_backup.py  test_auth.py  test_books.py  test_cli_endpoints.py  test_cors.py  test_highlights.py  test_kindle_import.py  test_token_scopes.py
tests/fixtures/: kindle_notebook_sample.json
tests/importers/: test_kindle_notebook.py
tests/middleware/: test_gzip_request.py
tests/routers/: test_kindle_cookie_route.py
tests/services/: test_kindle_cookie.py  test_kindle_import_status.py  test_kindle_import_watcher.py  test_kindle_scan_now_route.py  test_notifier.py
tools/: install_kindle_cron.sh  kindle_check_state.sh  kindle_check_state_cookies.sh  kindle_classify_failure.sh  kindle_cron.sh  kindle_dl.sh  kindle_login.sh  kindle_notify.sh
(+5 files in other folders)
