[project]
name = "freewise"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "aiofiles>=25.1.0",
    "aiosmtplib>=5.1.0",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jsonschema>=4.23.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.26",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]
