[project]
name = "freewise-cli"
version = "0.1.0"
description = "Command-line client for FreeWise — search and manage your highlights from the shell or from Claude Code."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
]

[project.scripts]
freewise = "freewise_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["freewise_cli"]
