[project]
name = "freewise-mcp"
version = "0.1.0"
description = "Model Context Protocol server for FreeWise — exposes highlight search/edit as tools usable from Claude Code."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "freewise-cli",
]

[project.scripts]
freewise-mcp = "freewise_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["freewise_mcp"]

# In a monorepo, freewise-cli lives one directory up. We point uv/pip at that
# local sibling via a tool-uv source override; pip falls back to the published
# package if it ever gets pushed.
[tool.uv.sources]
freewise-cli = { path = "../cli", editable = true }
